# backend/prod/routes/user.route.js
@@ -36,11 +36,11 @@ router.get(`/student/getAllStudents`, /*authenticateToken,*/ (req, res) => userC
 router.get(`/student/getDetails/:param`, /*authenticateToken,*/ (req, res) => userController.getDetails(req, res, `student_details`));
 router.get(`/student/getLastRegisteredStudents`, /*authenticateToken,*/ (req, res) => userController.getLastStudents(req, res, 5));
 // UPDATE STUDENT INFOS
-router.put(`/student/updateSchool/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `school`)); // Swagger à faire
-router.put(`/student/updateFormation/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `formation`)); // Swagger à faire
-router.put(`/student/updateExperience/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `experience`)); // Swagger à faire
-router.put(`/student/updateSkill/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `skills`)); // Swagger à faire
-router.put(`/student/updateCertification/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `certification`)); // Swagger à faire
-router.put(`/student/updateLanguage/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `languages`)); // Swagger à faire
-router.put(`/student/updateGameInfo/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `game_info`)); // Swagger à faire
+router.put(`/student/updateSchool/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetail(req, res, `school`));
+router.put(`/student/updateFormation/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `formation`));
+router.put(`/student/updateExperience/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `experience`));
+router.put(`/student/updateSkill/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `skills`));
+router.put(`/student/updateCertification/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `certification`));
+router.put(`/student/updateLanguage/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `languages`));
+router.put(`/student/updateGameInfo/:param`, /*authenticateToken,*/ (req, res) => userController.updateStudentDetailArray(req, res, `game_info`));
 exports.default = router;
